--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
 							</button>
 						  </div>
 						  <input
-							type="text"
+							type="password"
 							class="form-control"
 							placeholder="請輸入密碼"
 							aria-label="Example text with button addon"
@@ -84,10 +84,10 @@
 				  </form>
 				</div>
 			  </nav>
-		  
 			  <div class="container d-flex justify-content-center">
 			  <div class="col-md-9">
 					  <p><font size="3" color="red">{{message}}</font>
+				<form>
 					  <button type="submit" class="btn_submit">
 						  <img src="static/img/pages/login_back.png" class="img-responsive" height="100%" width="100%">
 					  </button>
