--- a/login.html
+++ b/login.html
@@ -85,10 +85,11 @@
 				</div>
 			  </nav>
 			  <div class="container d-flex justify-content-center">
-			  <div class="col-md-9">
+			  <div class="col-md-9 text-center">
 					  <p><font size="3" color="red">{{message}}</font>
 				<form>
-					  <button type="submit" class="btn_submit">
+					  <!-- <button type="submit" class="btn_submit"> -->
+					<button class="btn btn-outline-light" type="submit">
 						  <img src="static/img/pages/login_back.png" class="img-responsive" height="100%" width="100%">
 					  </button>
 		  
