--- a/login.html
+++ b/login.html
@@ -27,76 +27,99 @@
   </head>
 
   <body>
-		<nav class="navbar navbar-light bg-warning mb-2">
-				<div class="container d-flex justify-content-center">
-				  <form class="d-flex" method="post" action="profile">
-					<div class="form-row align-items-center">
-					  <div class="col-md-5 mb-2 mb-md-0">
-						<div class="input-group">
-						  <div class="input-group-prepend">
-							<button
-							  class="btn btn-secondary"
-							  type="button"
-							  id="button-addon1"
-							>
-							<i class="fas fa-user"></i>
-							</button>
-						  </div>
-						  <input
-							type="text"
-							class="form-control"
-							placeholder="請輸入帳號"
-							aria-label="Example text with button addon"
-							aria-describedby="button-addon1"
-						  />
-						</div>
-					  </div>
-					  <div class="col-md-4 mb-2 mb-md-0">
-						<div class="input-group ml-md-2">
-						  <div class="input-group-prepend">
-							<button
-							  class="btn btn-secondary"
-							  type="button"
-							  id="button-addon2"
-							>
-							<i class="fas fa-lock"></i>
-							</button>
-						  </div>
-						  <input
-							type="password"
-							class="form-control"
-							placeholder="請輸入密碼"
-							aria-label="Example text with button addon"
-							aria-describedby="button-addon2"
-						  />
-						</div>
-					  </div>
-					  <div class="col-md-3 d-flex justify-content-end align-items-center pt-0">
-							  <a class="text-white d-none d-md-block ml-2" href="">忘記密碼？</a>
-							  <a class="btn btn-outline-secondary ml-2 d-none d-md-block" href="https://eid.townway.com.tw/register" role="button">註冊</a>
-							</div>
-						<div class="col d-flex justify-content-end d-md-none">
-							  <a class="text-white d-flex align-items-center" href="">忘記密碼？</a>
-							  <a class="btn btn-outline-secondary ml-2" href="https://eid.townway.com.tw/register" role="button">註冊</a>
-						</div>
-					</div>
-		  
-				  </form>
-				</div>
-			  </nav>
-			  <div class="container d-flex justify-content-center">
-			  <div class="col-md-9 text-center">
-					  <p><font size="3" color="red">{{message}}</font>
-				<form>
-					  <!-- <button type="submit" class="btn_submit"> -->
-					<button class="btn btn-outline-light" type="submit">
-						  <img src="static/img/pages/login_back.png" class="img-responsive" height="100%" width="100%">
-					  </button>
-		  
-				  </form>
-			  </div>
-		  </div>
-  </body>
+	<form method="post" action="profile">
+	<nav class="navbar navbar-light bg-warning mb-2">
+      <div class="container d-flex justify-content-center">
+          <div class="form-row align-items-center">
+            <div class="col-md-5 mb-2 mb-md-0">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <button
+                    class="btn btn-secondary"
+                    type="button"
+                    id="button-addon1"
+                  >
+                    <i class="fas fa-user"></i>
+                  </button>
+                </div>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="請輸入帳號"
+                  aria-label="Example text with button addon"
+                  aria-describedby="button-addon1"
+                />
+              </div>
+            </div>
+            <div class="col-md-4 mb-2 mb-md-0">
+              <div class="input-group ml-md-2">
+                <div class="input-group-prepend">
+                  <button
+                    class="btn btn-secondary"
+                    type="button"
+                    id="button-addon2"
+                  >
+                    <i class="fas fa-lock"></i>
+                  </button>
+                </div>
+                <input
+                  type="password"
+                  class="form-control"
+                  placeholder="請輸入密碼"
+                  aria-label="Example text with button addon"
+                  aria-describedby="button-addon2"
+                />
+              </div>
+            </div>
+            <div
+              class="col-md-3 d-flex justify-content-end align-items-center pt-0"
+            >
+              <a class="text-white d-none d-md-block ml-2" href=""
+                >忘記密碼？</a
+              >
+              <a
+                class="btn btn-outline-secondary ml-2 d-none d-md-block"
+                href="https://eid.townway.com.tw/register"
+                role="button"
+                >註冊</a
+              >
+            </div>
+            <div class="col d-flex justify-content-end d-md-none">
+              <a class="text-white d-flex align-items-center" href=""
+                >忘記密碼？</a
+              >
+              <a
+                class="btn btn-outline-secondary ml-2"
+                href="https://eid.townway.com.tw/register"
+                role="button"
+                >註冊</a
+              >
+            </div>
+          </div>
+      </div>
+	</nav>
+	    <div class="container d-flex justify-content-center">
+      <div class="row">
+        <div class="col-md-9 text-center">
+          <p>
+            <font size="3" color="red">{{ message }}</font>
+          </p>
+          <form>
+            <button class="btn btn-outline-light" type="submit">
+              <img
+                src="static/img/pages/login_back.png"
+                class="img-responsive"
+                height="100%"
+                width="100%"
+              />
+            </button>
+
+        </div>
+      </div>
+	</div>
+</form>
+
+</body>
 </html>
 
 {% endblock %}
