--- a/login.html
+++ b/login.html
@@ -44,6 +44,7 @@
                 </div>
                 <input
                   type="text"
+                  name="username"
                   class="form-control"
                   placeholder="請輸入帳號"
                   aria-label="Example text with button addon"
@@ -64,6 +65,7 @@
                 </div>
                 <input
                   type="password"
+                  name="password"
                   class="form-control"
                   placeholder="請輸入密碼"
                   aria-label="Example text with button addon"
